# Project-Magnaundasoni

./: .editorconfig  .gitignore  BUILD.md  CONTRIBUTING.md  LICENSE  Project-Magnaundasoni.slnx  README.md
.github/workflows/: build-native.yml  release.yml  run-unit-tests.yml
PerformanceTests1/: Dx12TracePerfTest.cpp
PerformanceTests1/Performa.7AC69058/x64/Debug/: PerformanceTests1.dll.recipe  vc145.idb
PerformanceTests1/x64/Debug/: PerformanceTests1.dll.recipe  PerformanceTests1.exp  vc145.idb
ci/scripts/: linux_setup.sh  windows_setup.ps1
docs/: API.md  CONTRIBUTING.md  Integration-Unity.md  Integration-Unreal.md  Material-Presets.md  Performance-Tuning.md  RELEASE_PROCESS.md  ROADMAP.md  SETUP_DEVELOPMENT.md  STYLEGUIDE.md
docs/adr/: 0001-product-boundary.md  0002-solver-output-contract.md  0003-material-schema.md  0004-accel-structure.md  0005-streaming-model.md  0006-diffraction-strategy.md
docs/design/: api.md  architecture.md
native/: CMakeLists.txt
native/include/: Magnaundasoni.h
native/src/: Engine.cpp
native/src/backends/: ComputeBackend.cpp  ComputeBackend.h  D3D12ComputeBackend.cpp
native/src/core/: BVH.cpp  BVH.h  ChunkManager.cpp  ChunkManager.h  EdgeExtractor.cpp  EdgeExtractor.h  MaterialPresets.cpp  MaterialPresets.h  Scene.cpp  Scene.h  SpatialGrid.cpp  SpatialGrid.h  ThreadPool.cpp  ThreadPool.h  Types.h
native/src/render/: AcousticRenderer.cpp  AcousticRenderer.h  BandProcessor.cpp  BandProcessor.h  DiffractionSolver.cpp  DiffractionSolver.h  DirectPathSolver.cpp  DirectPathSolver.h  OutputMixer.cpp  OutputMixer.h  ReflectionSolver.cpp  ReflectionSolver.h  ReverbEstimator.cpp  ReverbEstimator.h  TemporalSmoother.cpp  TemporalSmoother.h
native/src/spatial/: BinauralConvolver.cpp  BinauralConvolver.h  HRTFDatabase.cpp  HRTFDatabase.h  Quaternion.h  SpatialConfig.cpp  SpatialConfig.h  SurroundPanner.cpp  SurroundPanner.h
native/tools/: profiler_host.cpp
scripts/: package-native.ps1  package-native.sh  package-unity.sh  package-unreal.sh
tests/unit/: CMakeLists.txt  placeholder_test.cpp
unity/: README-unity.md
unity/plugin/: package.json
unity/plugin/Editor/: MagnaundasoniEditorTools.cs  MagnaundasoniMaterialEditor.cs  MagnaundasoniSourceEditor.cs
unity/plugin/Runtime/: Magnaundasoni.asmdef  MagnaundasoniDebugVisualizer.cs  MagnaundasoniEngine.cs  MagnaundasoniGeometry.cs  MagnaundasoniListener.cs  MagnaundasoniMaterial.cs  MagnaundasoniNative.cs  MagnaundasoniSource.cs
unity/samples/MagnaundasoniDemo/Assets/Scripts/: DemoSceneManager.cs  DoorController.cs  MovingEnemy.cs
unreal/Content/MagnaundasoniDemo/: README.md  setup_demo.py
unreal/Plugin/: Magnaundasoni.uplugin
unreal/Plugin/Source/Magnaundasoni/: Magnaundasoni.Build.cs
unreal/Plugin/Source/Magnaundasoni/Private/: MagnaundasoniModule.cpp
unreal/Plugin/Source/Magnaundasoni/Public/: MagnaundasoniModule.h  MagnaundasoniTypes.h
unreal/Plugin/Source/MagnaundasoniRuntime/: MagnaundasoniRuntime.Build.cs
unreal/Plugin/Source/MagnaundasoniRuntime/Private/: MagnaundasoniActorComponent.cpp  MagnaundasoniGeometryComponent.cpp  MagnaundasoniNativeBridge.h  MagnaundasoniRuntime.cpp
unreal/Plugin/Source/MagnaundasoniRuntime/Public/: MagnaundasoniActorComponent.h  MagnaundasoniGeometryComponent.h  MagnaundasoniRuntimeModule.h  MagnaundasoniRuntimeTypes.h
x64/Debug/: PerformanceTests1.exp
